实现拖放表单布局

--- a/src/pages/Editor/index.less
+++ b/src/pages/Editor/index.less
@@ -48,6 +48,8 @@
     width: 100px;
     height: 100px;
     background-color: skyblue;
+    z-index: 100;
+    position: absolute;
 }
 .span4 {
     width: 33.333%;
