--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -39,3 +39,25 @@ body {
   color: #4e5b68;
   background: #F0F1F3;
 }
+
+
+/* drop */
+.drop {
+    background-color: 'skyblue';
+    width: 100%;
+    height: 100%;
+}
+.drop-default {
+    border: 1px dashed #ccc;
+}
+.drop-hover {
+    border: 1px solid red;
+}
+.col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9 {
+    height: 50px;
+}
+.module-box {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
